[gd_scene load_steps=3 format=3 uid="uid://8ecqgt6n7bvu"]

[ext_resource type="Script" uid="uid://dbk1fw1ac04x6" path="res://scripts/chat.gd" id="1_0fax0"]
[ext_resource type="Script" uid="uid://ciasm86iwatls" path="res://scripts/campo_chat.gd" id="2_iiyb8"]

[node name="Chat" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0fax0")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 10

[node name="Mensagens" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="CampoChat" type="LineEdit" parent="VBoxContainer/PanelContainer"]
layout_mode = 2
placeholder_text = "Escreva sua mensagem aqui..."
script = ExtResource("2_iiyb8")

[connection signal="gui_input" from="VBoxContainer/PanelContainer/CampoChat" to="." method="_on_campo_chat_gui_input"]
[connection signal="text_submitted" from="VBoxContainer/PanelContainer/CampoChat" to="." method="_on_campo_chat_text_submitted"]
